# KLTN

./: .gitignore  Jenkinsfile  Makefile  README.md  compose.yaml  merge_partition.py  partition_rawdata.py  pyproject.toml
ContinuousDeployment/: Jenkinsfile  check_new_model.py
airflow-dags/: addrole_svacc.yaml  airflow-dags-pvc.yaml  airflow_all_in_one.Dockerfile  createpod_role.yaml  requirements.txt
api/: Dockerfile  api-deployment.yaml  api-ingress.yaml  compose.api.yml  main.py  requirements.txt
iac_gke/: main.tf  terraform.tfstate  variables.tf
ml_tracking_registry/: Dockerfile
mlflow/: Dockerfile  mlflow.sh  requirements.txt
model_server/: Dockerfile  check_new_model.py  ranker-inferenceservice.yaml  ranker-model-server.yaml  requirements.txt  service.py
process_interaction_events/: batchcomsumer.Dockerfile  gcs_batch_consumer.py  offlinestore_batch_consumer.py
qdrant/: Chart.yaml
redis/: values.yaml
sampled_metadata/: sampled_metadata_part-00000-3b21ff34-4037-4b47-adcd-3c69a40413b4-c000.snappy.parquet  sampled_metadata_part-00007-3b21ff34-4037-4b47-adcd-3c69a40413b4-c000.snappy.parquet  sampled_metadata_part-00022-3b21ff34-4037-4b47-adcd-3c69a40413b4-c000.snappy.parquet  sampled_metadata_part-00036-3b21ff34-4037-4b47-adcd-3c69a40413b4-c000.snappy.parquet  sampled_metadata_part-00049-3b21ff34-4037-4b47-adcd-3c69a40413b4-c000.snappy.parquet  sampled_metadata_part-00056-3b21ff34-4037-4b47-adcd-3c69a40413b4-c000.snappy.parquet
scripts/: check_oltp_max_timestamp.py
src/: data_prep_utils.py  prepdata.py  sample.py  slm_tagging.py  tagging_llm.py
(+92 files in other folders)
